--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
 .screen{
     border: 2px black solid;
     border-radius: 5px;
-    margin-bottom: 20px;
     background-color: white;
     margin: 10px 10px;
 }
@@ -35,7 +34,6 @@ body{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(4,1fr);
-    margin-bottom: 1vh;
     margin: 10px 10px;
 
 }
@@ -55,4 +53,18 @@ body{
     margin-right: 3px;
     font-size: 25px;
     opacity: 0.5;
+}
+.clear{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    margin: 10px 10px;
+}
+.clear button{
+    font-size: 30px;
+    border-radius: 5px;
+    border: 2px solid black;
+    padding: 0 20px 0 20px;
+    
 }
